exports[`SectionTitle React component Headline version Renders Headline correctly 1`] = `
<h1
  className="headline">
  Section Title
</h1>
`;

exports[`SectionTitle React component Regular version Renders Regular Closed correctly 1`] = `
<nav
  className="title"
  onClick={[Function clickHandle]}
  title="Hover Hint">
  <svg
    className="toggle"
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "middle"
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m31 16.4q0 0.3-0.2 0.5l-10.4 10.4q-0.3 0.3-0.5 0.3t-0.6-0.3l-10.4-10.4q-0.2-0.2-0.2-0.5t0.2-0.5l1.2-1.1q0.2-0.2 0.5-0.2t0.5 0.2l8.8 8.8 8.7-8.8q0.3-0.2 0.5-0.2t0.6 0.2l1.1 1.1q0.2 0.2 0.2 0.5z" />
    </g>
  </svg>
  <h1
    className="title">
    Section Title
  </h1>
</nav>
`;

exports[`SectionTitle React component Regular version Renders Regular Opened correctly 1`] = `
<nav
  className="title open"
  onClick={[Function clickHandle]}
  title="Hover Hint">
  <svg
    className="toggle"
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "middle"
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m31 26.4q0 0.3-0.2 0.5l-1.1 1.2q-0.3 0.2-0.6 0.2t-0.5-0.2l-8.7-8.8-8.8 8.8q-0.2 0.2-0.5 0.2t-0.5-0.2l-1.2-1.2q-0.2-0.2-0.2-0.5t0.2-0.5l10.4-10.4q0.3-0.2 0.6-0.2t0.5 0.2l10.4 10.4q0.2 0.2 0.2 0.5z" />
    </g>
  </svg>
  <h1
    className="title">
    Section Title
  </h1>
</nav>
`;
